<resources>
    <string name="app_name">SehatQ-test</string>
    <string name="txt_login">Login</string>
    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="txt_atau">atau</string>
    <string name="txt_facebook">Facebook</string>
    <string name="txt_google">Google</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_home">Home</string>
    <string name="txt_feed">Feed</string>
    <string name="txt_cart">Cart</string>
    <string name="txt_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_search">Search</string>

    <!-- facebook -->
    <string name="facebook_app_id">819644488616165</string>
    <string name="fb_login_protocol_scheme">fb819644488616165</string>

</resources>